# flutter_rust_bridge

frb_example/with_flutter/rust/: Cargo.toml
frb_example/with_flutter/rust/assets/business_test/po/: copy.js
frb_example/with_flutter/rust/assets/js/ierp/: global.js
frb_example/with_flutter/rust/assets/js/xx_test/: test.js
frb_example/with_flutter/rust/assets/static/: flutter_service_worker.js
frb_example/with_flutter/rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  config.yaml  configuration.rs  lib.rs  startup.rs
frb_example/with_flutter/rust/src/app/: mod.rs
frb_example/with_flutter/rust/src/app/admin/: mod.rs  new_definition.rs
frb_example/with_flutter/rust/src/app/api/: mod.rs
frb_example/with_flutter/rust/src/app/cache/: global_cache.rs  mod.rs
frb_example/with_flutter/rust/src/app/config/: app_settings.rs  db_settings.rs  email_settings.rs  mod.rs  oauth_settings.rs
frb_example/with_flutter/rust/src/app/js/: mod.rs  validation.rs
frb_example/with_flutter/rust/src/app/route/: mod.rs  model copy.rs
frb_example/with_flutter/rust/src/app/scripting/: init.rs  rhai1.rhai
frb_example/with_flutter/rust/src/app/sec/: audit.rs  auth.rs  mod.rs  user_session.rs
frb_example/with_flutter/rust/src/app/system/: mod.rs
frb_example/with_flutter/rust/src/app/utils/: istr.rs  mod.rs  url.rs
frb_example/with_flutter/rust/src/db/: action.rs  db_delete.rs  db_execution.rs  insert.rs  mod.rs  query.rs  select.rs  sql_data.rs  structure.rs  update.rs
frb_example/with_flutter/rust/src/db/copy_action/: child_copy.rs  copy.rs  mod.rs
frb_example/with_flutter/rust/src/db/imysql/: db_actions.rs  execute.rs  mod.rs  select.rs
frb_example/with_flutter/rust/src/db/ipostgres/: mod.rs  select.rs
frb_example/with_flutter/rust/src/db/isqlite/: connection.rs  execute.rs  mod.rs  select.rs
frb_example/with_flutter/rust/src/db/model/: db_conn_map.rs  db_type.rs  mod.rs
frb_example/with_flutter/rust/src/iweb/: mod.rs
frb_example/with_flutter/rust/src/model/: mod.rs
frb_example/with_flutter/rust/templates/: comments.html  docs-page copy 2.html  docs-page.html  header.html
(+182 files in other folders)
