[package]
name = "flutter_rust_bridge_example"
version = "0.1.0"
edition = "2018"

[lib]
name = "flutter_rust_bridge_example"
crate-type = ["cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = { workspace = true, features = [
  "chrono",
  "uuid",
] }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
flutter_rust_bridge = { workspace = true, features = ["chrono"]}
num = "0.4"                                             # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.24.3"                                        # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8"                                       # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
actix-web = { version = "4", features = ["rustls"] }
actix-files = "0.6.2"
actix-cors = "0.6.4"
actix-web-lab = "0.19.1"
askama = "0.12.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# mio = "0.8.8"
# docopt = "0.6.67"
rustls = "0.20.2"
rustls-pemfile = "1"
serde_json = "1.0.96"
url = "2.3.1"
base64 = "0.21.2"
lazy_static = "1.4.0"
serde = {version = "1.0.160",  features = ["derive"]}
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rust_decimal = "1.10.1"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
serde_postgres = "0.2.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
# awc = "3.1.1"
jsonwebtoken = "8.2.0"
argon2 = "0.4.1"
mockall = "0.11.4"
js-sandbox = { git = "https://github.com/inoerp/js-sandbox.git" }
rhai = "1.14.0"
dashmap = "3.11.10"

mime_guess = "2.0.4"
urlencoding = "2.1.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
snafu = "0.6.10"
thiserror = "1.0.31"
[dependencies.sqlx]
version = "0.6"
default-features = true
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"mssql",
"mysql",
"sqlite",
"uuid",
"chrono",
"migrate",
"decimal"
]

[dev-dependencies]
reqwest = "0.11"
http = "0.2"